# MPRPC

./: CMakeLists.txt
.cache/clangd/index/: mprpcapplication.cc.3FA11552BD2C0E98.idx  mprpcapplication.h.E7ADE83AB0DDFC51.idx  mprpcconfig.cc.39E4B109C16FE5F2.idx  mprpcconfig.h.8AF3D03BAEFA521E.idx  rpcheader.pb.cc.6476619181502CE8.idx  rpcheader.pb.h.DD5FC4816CD22351.idx  rpcprovider.cc.B3C317FEBF944ED8.idx  rpcprovider.h.C5CDBE06C5C7628F.idx  user.pb.cc.428534EA7839B411.idx  user.pb.h.9DF6DE9C21E31C1D.idx  userservice.cc.BB3D6A6DD37463C7.idx
example/: user.pb.cc  user.pb.h  user.proto
example/Callee/: CMakeLists.txt  userservice.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcconfig.cc  rpcheader.proto  rpcprovider.cc
src/include/: mprpcapplication.h  mprpcconfig.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
